# rd_test_utils

./: .gitignore  .pre-commit-config.yaml  NOTES_PYTEST_FIXTURES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rd_test_utils/data/lvl1/: CW_TAGSET_DICT.gzip  CW_TAGSET_DICT.pkl  HIKE_TAGSET_DICT.gzip  HIKE_TAGSET_DICT.pkl  HIKING_ROUTES_DICT.gzip  HIKING_ROUTE_NODES_DICT.gzip  HIKING_ROUTE_PROFILE.gzip  HIKING_ROUTE_WAYS_DICT.gzip  HIKING_SR_ROUTES_DICT.gzip  HIKING_SUPERROUTES_DICT.gzip  HIKING_SUPERROUTE_PROFILE.gzip  MTB_ROUTES_DICT.gzip  MTB_ROUTE_NODES_DICT.gzip  MTB_ROUTE_PROFILE.gzip  MTB_ROUTE_WAYS_DICT.gzip  MTB_SR_ROUTES_DICT.gzip  MTB_SUPERROUTES_DICT.gzip  MTB_SUPERROUTE_PROFILE.gzip  NODES_TAGSETS_DICT.gzip  NODES_TAGSETS_DICT.pkl  REV_HIKE_TAGSET_DICT.gzip  REV_HIKE_TAGSET_DICT.pkl  REV_TAGSET_COMBI_DICT.gzip  REV_TAGSET_COMBI_DICT.pkl  ROUTES_DICT.gzip  ROUTE_NODES_DICT.gzip  ROUTE_PROFILE.gzip  ROUTE_WAYS_DICT.gzip  SR_ROUTES_DICT.gzip  SUPERROUTES_DICT.gzip  SUPERROUTE_PROFILE.gzip  TAGSET_DICT.gzip  TAGSET_DICT.pkl  TAG_COMBI_DICT.gzip  TAG_COMBI_DICT.pkl
src/rd_test_utils/data/lvl2/add-features-dach/: ADD_FEAT_TAGSET_DICT.gzip
src/rd_test_utils/data/raw/: liechtenstein-latest.osm.pbf  monaco-latest.osm.pbf  san-marino-overpass.osm.bz2
src/rd_test_utils/fixtures/: config.py  lvl1.py  lvl2.py  osmium_raw.py
tests/: conftest.py
tests/unit/: test_config_fixtures.py  test_lvl1_data.py  test_lvl1_fixtures.py  test_lvl2_data.py  test_lvl2_fixtures.py  test_osmium_raw.py  test_raw_data.py
(+48 files in other folders)
